qq 验证码 绑定

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
       href="//at.alicdn.com/t/font_2143783_iq6z4ey5vu.css"
     />
     <title>小兔鲜儿</title>
+    <!-- QC包 挂到了window上 没有内置的ts支持 需要手动添加对用到的方法 进行类型注解 将来不会报错 -->
+    <script
+      type="text/javascript"
+      charset="utf-8"
+      src="http://connect.qq.com/qc_jssdk.js"
+      data-appid="100556005"
+      data-redirecturi="http://www.corho.com:8080/#/login/callback"
+    ></script>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+ 
